# django-postgresql-reconnect

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml  deploy.yml
django_postgresql_reconnect/: __init__.py  decorator.py  helpers.py  middleware.py
django_postgresql_reconnect/backend/: base.py
tests/: conftest.py  settings.py  test_backend.py  test_decorator.py  test_helpers.py  test_middleware.py
tests/reports/: out.xml
